Version 2.01 - 14 September 2007, by Pascal "Pixel" Rigaux

- fix bug occurring with --keep
- fix regression in 2.00: keep_unrequested_dependencies is still used by
  installer. restore it, but must now be set trough
  $urpm->{keep_unrequested_dependencies}

Version 2.00 - 13 September 2007, by Pascal "Pixel" Rigaux

- speedup is_arch_compat (7 times faster) by keeping the platform in a cache
- do not propose packages for non installed locales
- pass the prefered choices to {callback_choices}: this allows urpmi to select
  all the prefered packages according to installed locales
- handle promote for conflict from installed package 
  (fixes test_gh() from urpmi split-transactions--promote test case)
- handle promote from installed package which require a unselected package,
  whereas new package does not require it anymore 
  (cf test_d & test_e from split-transactions--conflict urpmi test case)

Version 1.80 - 3 September 2007, by Pascal "Pixel" Rigaux

- fix bug in sort_graph (used by build_transaction_set)

Version 1.78 - 31 August 2007, by Pascal "Pixel" Rigaux

- fix dead-loop in build_transaction_set (#33020)

Version 1.77 - 29 August 2007, by Pascal "Pixel" Rigaux

- disable "dropping tags from rpm header" until we can safely use it

Version 1.76 - 28 August 2007, by Pascal "Pixel" Rigaux

- build_transaction_set: new sort algorithm which allow returning sets of
  circular dependent packages, taking into account obsoleted packages
  (fixes #31969). It may still fail in presence of conflicts
- allow running transaction with justdb option
- fix split_length > 1 
  (eg: "urpmi --split-length 2 a b c" will only install 2 pkgs)
- spec2srcheader: workaround parseSpec returning a header where ->arch is set
  to %{_target_cpu} whereas we really want a header similar to .src.rpm
  (see #32824)

Version 1.75 - 12 August 2007, by Pascal "Pixel" Rigaux

- fix dropping tags from rpm header.
  it hasn't work since MDK8.1 and rpm 4.0. 